--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="humidity">Humidity</string>
     <string name="wind">Wind</string>
     <string name="uv_index">UV Index</string>
+    <string name="search">Search</string>
 </resources>
